Added link to monet arxiv

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -186,11 +186,10 @@
                         &emsp; <small><font color="#979797">(* denotes equal contibution)</font></small></p>
                     <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2017 
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
-                    <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> 
-                        <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
 
                     <a href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing" class="badge badge-primary">pdf</a>
                     <a href="https://drive.google.com/file/d/1fvVulYnM5e_HK_B_DuigczL9q_uWsdgE/view?usp=sharing" class="badge badge-primary">biblio</a>
+                    <a href="https://arxiv.org/abs/1611.08402" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>arxiv</a>
                     <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
