Added link to acnn arxiv

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -207,11 +207,12 @@
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein</p>
                     <p class="mb-1"><i>Neural Information Processing Systems (NeurIPS)</i>, 2016</p>
-                    <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br>
+                    <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
 
-                    <!-- <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <a href="https://arxiv.org/abs/1605.06437" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>arxiv</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
