--- a/sections/publications.html
+++ b/sections/publications.html
@@ -210,10 +210,10 @@
                     <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
 
                     <a href="#" class="badge badge-primary">pdf</a>
-                    <a href="#" class="badge badge-primary">biblio</a>
+                    <a href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing" class="badge badge-primary">biblio</a>
                     <a href="https://arxiv.org/abs/1605.06437" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>arxiv</a>
+                    <a href="https://github.com/davideboscaini/acnn" class="badge badge-primary"><i class="fa fa-github"></i>code</a>
                     <!-- <a href="#" class="badge badge-primary">slides</a>
-                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
