--- a/sections/publications.html
+++ b/sections/publications.html
@@ -211,8 +211,8 @@
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing" class="badge badge-primary">biblio</a>
-                    <a href="https://arxiv.org/abs/1605.06437" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>arxiv</a>
-                    <a href="https://github.com/davideboscaini/acnn" class="badge badge-primary"><i class="fa fa-github"></i>code</a>
+                    <a href="https://arxiv.org/abs/1605.06437" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
+                    <a href="https://github.com/davideboscaini/acnn" class="badge badge-primary"><i class="fa fa-github"></i>&nbsp;code</a>
                     <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
