--- a/sections/publications.html
+++ b/sections/publications.html
@@ -187,9 +187,9 @@
                     <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2017 
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
 
-                    <a href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing" class="badge badge-primary">pdf</a>
+                    <a href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing" class="badge badge-primary"><i class="fa fa-file-pdf-o"></i>&nbsp;pdf</a>
                     <a href="https://drive.google.com/file/d/1fvVulYnM5e_HK_B_DuigczL9q_uWsdgE/view?usp=sharing" class="badge badge-primary">biblio</a>
-                    <a href="https://arxiv.org/abs/1611.08402" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>arxiv</a>
+                    <a href="https://arxiv.org/abs/1611.08402" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
                     <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
@@ -209,7 +209,7 @@
                     <p class="mb-1"><i>Neural Information Processing Systems (NeurIPS)</i>, 2016</p>
                     <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
 
-                    <a href="https://drive.google.com/file/d/144zT0gGZY9JyfeQR0jusS181tCKDuSrG/view?usp=sharing" class="badge badge-primary">pdf</a>
+                    <a href="https://drive.google.com/file/d/144zT0gGZY9JyfeQR0jusS181tCKDuSrG/view?usp=sharing" class="badge badge-primary"><i class="fa fa-file-pdf-o"></i>&nbsp;pdf</a>
                     <a href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing" class="badge badge-primary">biblio</a>
                     <a href="https://arxiv.org/abs/1605.06437" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
                     <a href="https://github.com/davideboscaini/acnn" class="badge badge-primary"><i class="fa fa-github"></i>&nbsp;code</a>
