Added webpage link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 I got my PhD in Computational Science from the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> (USI) in Lugano, CH, 
                                 under the supervision of prof. <a href="https://www.imperial.ac.uk/people/m.bronstein">Michael Bronstein</a>.
                                 My research interests include 3D Computer Vision and 3D Deep Learning.
-                                I'm one of the pioneers of Geometric Deep Learning.
+                                I'm one of the pioneers of <a href="https://geometricdeeplearning.com/">Geometric Deep Learning</a>.
                             </p>
                         </div>
                         <img class="align-self-start mr-3" src="./data/portrait_170928.jpg" alt="Portrait" width="200" height="267">
