--- a/sections/publications.html
+++ b/sections/publications.html
@@ -233,9 +233,9 @@
                     <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2016 
                         &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2016</font></p>
 
-                    <!-- <a href="#" class="badge badge-primary">pdf</a>
-                    <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <a href="https://drive.google.com/file/d/16xwzZCNSs2KwO78horEVBAjhfQWR2vio/view?usp=sharing" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
+                    <a href="https://drive.google.com/file/d/1CBgn1OzF06Sq9oE2CTPosq7VNSalBNOI/view?usp=sharing" class="badge badge-primary"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
