--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="https://davideboscaini.github.io/">home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./sections/publications.html">publications</a>
+                            <a class="nav-link" href="sections/publications.html">publications</a>
                         </li>
                         <!--<li class="nav-item">
                             <a class="nav-link" href="./sections/talks.html">talks</a>
