Added PatchMixer paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="https://davideboscaini.github.io/">home</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="publications.html">publications <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="publications.html">publications<span class="sr-only">(current)</span></a>
                         </li>
                         <!--<li class="nav-item">
                             <a class="nav-link" href="./sections/talks.html">talks</a>
@@ -84,10 +84,10 @@
             <h3>Papers</h3>
             <ul class="list-group list-group-flush">
 
-                <!-- 2020, Nature Methods -->
+                <!-- 2023, IMAVIS -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" 
+                        <img src="../data/thumb/2023_PatchMixer.png" class="figure-img img-fluid border rounded-0" 
                         alt="Proteins paper thumbnail" style="height: 120px">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
@@ -100,6 +100,24 @@
                     <p class="mb-1"><i>Nature Methods</i>, 2020
                         &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font></p>
 
+                    <!-- <a href="#" class="badge badge-primary">pdf</a> -->
+                    <!-- <a href="#" class="badge badge-primary">biblio</a> -->
+                </li>
+
+                <!-- 2020, Nature Methods -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/2023_PatchMixer.png" class="figure-img img-fluid border rounded-0" 
+                        alt="PatchMixer paper thumbnail" style="height: 120px">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">PatchMixer: Rethinking network design to boost generalization for 3D point cloud understanding</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
+                    <p class="mb-1"><i>Image and Vision Computing</i>, 2023</p>
+                    <!-- &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font> -->
+                    
                     <!-- <a href="#" class="badge badge-primary">pdf</a> -->
                     <!-- <a href="#" class="badge badge-primary">biblio</a> -->
                 </li>
@@ -151,7 +169,7 @@
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/2019_segm.png" class="figure-img img-fluid border rounded-0" 
-                        alt="3D Shape Segmenation paper thumbnail">
+                        alt="3D Shape Segmentation paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">3D shape segmentation with geometric deep learning</h5>
