Added PatchMixer paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -112,8 +112,7 @@
                             alt="Proteins paper thumbnail" style="height: 120px">
                         </figure>
                         <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-                            <h5 class="mb-1">Deciphering interaction fingerprints from protein molecular surfaces
-                                using geometric deep learning</h5>
+                            <h5 class="mb-1">Deciphering interaction fingerprints from protein molecular surfaces using geometric deep learning</h5>
                             <small class="text-muted"></small>
                         </div>
                         <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà,
