Added PatchMixer paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -96,7 +96,7 @@
                             <small class="text-muted"></small>
                         </div>
                         <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
-                        <p class="mb-1"><i>Image and Vision Computing</i>, 2023</p>
+                        <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
                         <!-- &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font> -->
                         
                         <!-- <a href="#" class="badge badge-primary">pdf</a> -->
@@ -108,7 +108,7 @@
                 <li class="list-group-item list-group-item-action">
                     <li class="list-group-item list-group-item-action">
                         <figure class="figure">
-                            <img src="../data/thumb/202_nature_methods.png" class="figure-img img-fluid border rounded-0" 
+                            <img src="../data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" 
                             alt="Proteins paper thumbnail" style="height: 120px">
                         </figure>
                         <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
