Added PatchMixer paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -97,10 +97,10 @@
                         </div>
                         <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
                         <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-                        <!-- &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font> -->
-                        
-                        <!-- <a href="#" class="badge badge-primary">pdf</a> -->
-                        <!-- <a href="#" class="badge badge-primary">biblio</a> -->
+
+                        <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
+                        <a href="https://arxiv.org/abs/2307.15692" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
+                        <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a>
                     </li>
                 </li>
 
