Added PatchMixer paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -98,9 +98,10 @@
                         <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
                         <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
 
-                        <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
+                        <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
                         <a href="https://arxiv.org/abs/2307.15692" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
-                        <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a>
+                        <a href="https://github.com/davideboscaini/PatchMixer" class="badge badge-primary"><i class="fa fa-github"></i>&nbsp;code</a>
+                        <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
                     </li>
                 </li>
 
