--- a/sections/publications.html
+++ b/sections/publications.html
@@ -97,6 +97,8 @@
                         </div>
                         <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
                         <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
+                        Novel network design that is intrinsically effective in generalisation across datasets unseen at training time<br>
+                        <!-- <small></small><br> -->
 
                         <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
                         <a href="https://arxiv.org/abs/2307.15692" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
@@ -341,8 +343,7 @@
                         alt="Coulomb paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-                        <h5 class="mb-1">Coulomb shapes: using electrostatic forces 
-                            for deformation-invariant shape representation</h5>
+                        <h5 class="mb-1">Coulomb shapes: Using electrostatic forces for deformation-invariant shape representation</h5>
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Ramunas Girdziusaz, Michael M. Bronstein</p>
