--- a/sections/publications.html
+++ b/sections/publications.html
@@ -97,7 +97,7 @@
                         </div>
                         <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
                         <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-                        <font color="#899499"></font>TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
+                        <font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
                         Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font>
 
                         <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
