Added PatchMixer paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -97,8 +97,8 @@
                         </div>
                         <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
                         <p class="mb-1"><i>Image and Vision Computing (IMAVIS)</i>, 2023</p>
-                        <font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
-                        Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font>
+                        <small><font color="#899499">TLDR: Novel network design that is intrinsically effective in generalisation across datasets unseen at training time. 
+                        Achieves SOTA classification performance on the GraspNetPC dataset in the transfer learning setting.</font></small><br>
 
                         <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
                         <a href="https://arxiv.org/abs/2307.15692" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
