--- a/sections/publications.html
+++ b/sections/publications.html
@@ -84,6 +84,28 @@
             <h3>Papers</h3>
             <ul class="list-group list-group-flush">
 
+                <!-- 2023, ICCV-W -->
+                <li class="list-group-item list-group-item-action">
+                    <li class="list-group-item list-group-item-action">
+                        <figure class="figure">
+                            <img src="../data/thumb/2023_FCGF6D.png" class="figure-img img-fluid border rounded-0" 
+                            alt="FCGF6D paper thumbnail" style="height: 120px">
+                        </figure>
+                        <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                            <h5 class="mb-1">Revisiting fully convolutional geometric features for object 6D pose estimation</h5>
+                            <small class="text-muted"></small>
+                        </div>
+                        <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
+                        <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023</p>
+                        <!-- <small><font color="#899499">TLDR: TBD.</font></small><br> -->
+
+                        <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
+                        <a href="https://arxiv.org/abs/2307.15514" class="badge badge-primary"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
+                        <!-- <a href="https://github.com/davideboscaini/PatchMixer" class="badge badge-primary"><i class="fa fa-github"></i>&nbsp;code</a> -->
+                        <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
+                    </li>
+                </li>
+
                 <!-- 2023, IMAVIS -->
                 <li class="list-group-item list-group-item-action">
                     <li class="list-group-item list-group-item-action">
@@ -122,7 +144,7 @@
                             <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
                         <p class="mb-1"><i>Nature Methods</i>, 2020
                             &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font></p>
-    
+
                         <!-- <a href="#" class="badge badge-primary">pdf</a> -->
                         <!-- <a href="#" class="badge badge-primary">biblio</a> -->
                     </li>
