Added PatchMixer paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -96,7 +96,8 @@
                             <small class="text-muted"></small>
                         </div>
                         <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
-                        <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023</p>
+                        <p class="mb-1"><i>Under review</i>
+                        <!-- <p class="mb-1"><i>International Workshop on Recovering 6D Object Pose (R6D)</i>, 2023</p> -->
                         <!-- <small><font color="#899499">TLDR: TBD.</font></small><br> -->
 
                         <!-- <a href="https://drive.google.com/" class="badge badge-primary"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
