--- a/publications.html
+++ b/publications.html
@@ -120,7 +120,7 @@
           <p class="mb-1"><i>International Conference on Image Analysis and Processing (ICIAP)</i>, 2019
             &mdash; <font color="#a21a2a">Spotlight presentation</font></p>
 
-          <a class="badge text-bg-primary" href="https://arxiv.org/abs/2002.00397"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2002.00397"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
         </li>
 
         <!-- CVPR 2017 -->
@@ -136,9 +136,9 @@
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2017
               &mdash; <font color="#a21a2a">Oral presentation</font></p>
 
-          <a class="badge text-bg-primary" href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
-          <a class="badge text-bg-primary" href="https://arxiv.org/abs/1611.08402"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
-          <a class="badge text-bg-primary" href="https://drive.google.com/file/d/1fvVulYnM5e_HK_B_DuigczL9q_uWsdgE/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a>
+          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/1611.08402"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1fvVulYnM5e_HK_B_DuigczL9q_uWsdgE/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a>
         </li>
 
         <!-- NeurIPS 2016 -->
@@ -152,10 +152,10 @@
           <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein</p>
           <p class="mb-1"><i>Neural Information Processing Systems (NeurIPS)</i>, 2016</p>
 
-          <a class="badge text-bg-primary" href="https://drive.google.com/file/d/144zT0gGZY9JyfeQR0jusS181tCKDuSrG/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
-          <a class="badge text-bg-primary" href="https://arxiv.org/abs/1605.06437"><i class="ai ai-arxiv ai-1x"></i>&nbsp;arxiv</a>
-          <a class="badge text-bg-primary" href="https://github.com/davideboscaini/acnn"><i class="fa fa-github"></i>&nbsp;code</a>
-          <a class="badge text-bg-primary" href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a>
+          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/144zT0gGZY9JyfeQR0jusS181tCKDuSrG/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/1605.06437"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/acnn"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a>
       </li>
 
         <!-- EG 2016 -->
@@ -170,8 +170,8 @@
           <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2016
             &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2016</font></p>
 
-          <a class="badge text-bg-primary" href="https://drive.google.com/file/d/16xwzZCNSs2KwO78horEVBAjhfQWR2vio/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
-          <a class="badge text-bg-primary" href="https://drive.google.com/file/d/1CBgn1OzF06Sq9oE2CTPosq7VNSalBNOI/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a>
+          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/16xwzZCNSs2KwO78horEVBAjhfQWR2vio/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1CBgn1OzF06Sq9oE2CTPosq7VNSalBNOI/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a>
       </li>
 
         <!-- SGP 2015 -->
