Updated max-height figures

--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
         <!-- ICCV-W 2023 -->
         <li class="list-group-item list-group-item-action">
           <!-- <figure class="figure">
-            <img src="data/thumb/2023_FCGF6D.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2023_FCGF6D.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure> -->
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Revisiting Fully Convolutional Geometric Features for object 6D pose estimation</h5>
@@ -54,7 +54,7 @@
         <!-- IMAVIS 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2023_PatchMixer.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2023_PatchMixer.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">PatchMixer: Rethinking network design to boost generalization for 3D point cloud understanding</h5>
@@ -73,7 +73,7 @@
         <!-- Nature Methods 2020 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Deciphering interaction fingerprints from protein molecular surfaces using geometric deep learning</h5>
