Updated max-height figures

--- a/publications.html
+++ b/publications.html
@@ -86,7 +86,7 @@
         <!-- NeurIPS-W 2019 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2019_neurips_workshop.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2019_neurips_workshop.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Learning interaction patterns from surface representations of protein structure</h5>
@@ -98,7 +98,7 @@
         <!-- 3DV 2019 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2019_sda.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2019_sda.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Structured domain adaptation for 3D keypoint estimation</h5>
@@ -111,7 +111,7 @@
         <!-- ICIAP 2019 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2019_segm.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2019_segm.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">3D shape segmentation with geometric deep learning</h5>
@@ -126,7 +126,7 @@
         <!-- CVPR 2017 -->
         <li class="list-group-item list-group-item-action"> <!--flex-column align-items-start-->
           <figure class="figure">
-            <img src="data/thumb/2017_monet.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2017_monet.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Geometric deep learning on graphs and manifolds using mixture model CNNs</h5>
@@ -144,7 +144,7 @@
         <!-- NeurIPS 2016 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2016_acnn_nips.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2016_acnn_nips.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Learning shape correspondence with anisotropic convolutional neural networks</h5>
@@ -161,7 +161,7 @@
         <!-- EG 2016 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2016_add.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2016_add.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Anisotropic diffusion descriptors</h5>
@@ -177,7 +177,7 @@
         <!-- SGP 2015 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks</h5>
@@ -190,7 +190,7 @@
         <!-- ICCV-W 2015 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2015_gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2015_gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Geodesic convolutional neural networks on Riemannian manifolds</h5>
@@ -204,7 +204,7 @@
         <!-- EG 2015 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Shape-From-Operator: Recovering shapes from intrisic operators</h5>
@@ -217,7 +217,7 @@
         <!-- 3DOR 2014 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Coulomb shapes: Using electrostatic forces for deformation-invariant shape representation</h5>
@@ -230,7 +230,7 @@
         <!-- TVC 2014 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">A sparse coding approach for local-to-global 3D shape description</h5>
@@ -242,7 +242,7 @@
         <!-- 3DOR 2013 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="height: 120px">
+            <img src="data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Local signature quantization by sparse coding</h5>
