Added MIA 2023 paper

--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
         <!-- IMAVIS 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
-            <img src="data/thumb/2023_PatchMixer.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+            <img src="data/thumb/2023_PatchMixer.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
           </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">PatchMixer: Rethinking network design to boost generalization for 3D point cloud understanding</h5>
@@ -67,6 +67,24 @@
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
+          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
+        </li>
+
+        <!-- MIA 2023 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2023_MIA.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">Supervised tractogram filtering using geometric deep learning</h5>
+          </div>
+          <p class="mb-1">Pietro Astolfi, Ruben Verhagen, Laurent Petit, Emanuele Olivetti, Silvio Sarubbo, Jonathan Masci, <strong>Davide Boscaini</strong>, Paolo Avesani</p>
+          <p class="mb-1"><i>Medical Image Analysis (MIA)</i>, 2023</p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
+
+          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <!-- <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a> -->
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
         </li>
 
