Added MIA 2023 paper

--- a/publications.html
+++ b/publications.html
@@ -72,9 +72,9 @@
 
         <!-- MIA 2023 -->
         <li class="list-group-item list-group-item-action">
-          <figure class="figure">
+          <!-- <figure class="figure">
             <img src="data/thumb/2023_MIA.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
-          </figure>
+          </figure> -->
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Supervised tractogram filtering using geometric deep learning</h5>
           </div>
