--- a/publications.html
+++ b/publications.html
@@ -35,9 +35,9 @@
 
         <!-- ICCV-W 2023 -->
         <li class="list-group-item list-group-item-action">
-          <!-- <figure class="figure">
-            <img src="data/thumb/2023_FCGF6D.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
-          </figure> -->
+          <figure class="figure">
+            <img src="data/thumb/2023_ICCVW_FCGF6D.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="max-height: 120px">
+          </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Revisiting Fully Convolutional Geometric Features for object 6D pose estimation</h5>
           </div>
@@ -86,6 +86,19 @@
           <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
           <!-- <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a> -->
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
+        </li>
+
+        <!-- CVPR-W 2023 -->
+        <li class="list-group-item list-group-item-action">
+          <!-- <figure class="figure">
+            <img src="data/thumb/2023_CVPRW.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
+          </figure> -->
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">The MONET dataset: Multimodal drone thermal dataset recorded in rural scenarios</h5>
+          </div>
+          <p class="mb-1">L. Riz, A. Caraffa, M. Bortolon, M.L. Mekhalfi, <strong>D. Boscaini</strong>, A. Moura, J. Antunes, A. Dias, H. Silva, A. Leonidou, C. Constantinides, C. Keleshis, D. Abate, F. Poiesi</p>
+          <p class="mb-1"><i>CVPR-W</i>, 2023</p>
+          <!-- <p class="mb-1"></p><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
         </li>
 
         <!-- Nature Methods 2020 -->
