Fixed authors of CVPRW 2023 paper

--- a/publications.html
+++ b/publications.html
@@ -96,7 +96,7 @@
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">The MONET dataset: Multimodal drone thermal dataset recorded in rural scenarios</h5>
           </div>
-          <p class="mb-1">L. Riz, A. Caraffa, M. Bortolon, M.L. Mekhalfi, <strong>D. Boscaini</strong>, A. Moura, J. Antunes, A. Dias, H. Silva, A. Leonidou, C. Constantinides, C. Keleshis, D. Abate, F. Poiesi</p>
+          <p class="mb-1">Luigi Riz, Andrea Caraffa, Matteo Bortolon, Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, A. Moura, J. Antunes, A. Dias, H. Silva, A. Leonidou, C. Constantinides, C. Keleshis, D. Abate, Fabio Poiesi</p>
           <p class="mb-1"><i>CVPR-W</i>, 2023</p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
         </li>
