Updated About section

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
       <h1>Hi,</h1>
       <div class="col-lg-8 px-0">
         <p class="fs-5">welcome to my page!</p>
-        <p class="fs-5">My name is Davide Boscaini, and I am a Research Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> lab
-            of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> in Trento, Italy.<br>
+        <p class="fs-5">My name is Davide Boscaini, and I am a Research Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) lab
+            of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> (FBK) in Trento, Italy.<br>
             Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p>
         <!-- <p class="fs-5">According to <a href="https://scholar.google.com/citations?user=dT1N2IUAAAAJ&hl=en&oi=ao">Google Scholar</a>, I have an h-index of 13, an i10-index of 14, and my papers have been cited around 4300 times.</p> -->
-        <!-- <p class="fs-5">My background is heterogenous. I have a PhD in Computational Science at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> in Lugano, Switzerland,
-            under the supervision of prof. <a href="https://www.cs.ox.ac.uk/people/michael.bronstein">Michael Bronstein</a>.
-            Prior to that, I received a MS in Mathematics in 2013 and a BS in Applied Mathematics in 2010, both from the <a href="https://www.univr.it/en">University of Verona</a>, my hometown.</p> -->
-        <!-- I joined FBK in late 2017 -->
+        <p class="fs-5">Before joining FBK in 2017, I received my PhD in Computational Science
+            under the supervision of prof. <a href="https://www.cs.ox.ac.uk/people/michael.bronstein">Michael Bronstein</a>
+            at the <a href="https://www.usi.ch/en">Università della Svizzera italiana</a> (USI) in Lugano, Switzerland.
+            Prior to that, I received a Master's degree in Mathematics in 2013 and a Bachelor's degree in Applied Mathematics in 2010,
+            both from the <a href="https://www.univr.it/en">University of Verona</a>, Italy.</p>
 
         <hr class="col-1 my-4">
 
