Updated About section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       <h1>Hi,</h1>
       <div class="col-lg-8 px-0">
         <p class="fs-5">welcome to my page!</p>
-        <p class="fs-5">My name is Davide Boscaini, and I am a Research Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) lab
+        <p class="fs-5">I am a Research Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) lab
             of the <a href="https://www.fbk.eu/en">Bruno Kessler Foundation</a> (FBK) in Trento, Italy.<br>
             Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p>
+        <!-- My name is Davide Boscaini, and -->
         <!-- <p class="fs-5">According to <a href="https://scholar.google.com/citations?user=dT1N2IUAAAAJ&hl=en&oi=ao">Google Scholar</a>, I have an h-index of 13, an i10-index of 14, and my papers have been cited around 4300 times.</p> -->
         <p class="fs-5">Before joining FBK in 2017, I received my PhD in Computational Science
             under the supervision of prof. <a href="https://www.cs.ox.ac.uk/people/michael.bronstein">Michael Bronstein</a>
