Updated MIA 2023 paper

--- a/publications.html
+++ b/publications.html
@@ -72,9 +72,9 @@
 
         <!-- MIA 2023 -->
         <li class="list-group-item list-group-item-action">
-          <!-- <figure class="figure">
+          <figure class="figure">
             <img src="data/thumb/2023_MIA.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
-          </figure> -->
+          </figure>
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Supervised tractogram filtering using geometric deep learning</h5>
           </div>
@@ -82,8 +82,8 @@
           <p class="mb-1"><i>Medical Image Analysis (MIA)</i>, 2023</p>
           <!-- <p class="mb-1"></p><font color="#899499">TLDR: First geometric deep learning application to the problem of .</font></p> -->
 
-          <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a> -->
-          <!-- <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15692"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a> -->
+          <a class="badge text-bg-primary" href="https://www.sciencedirect.com/science/article/abs/pii/S1361841523001536?via%3Dihub"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;pdf</a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2212.03300"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <!-- <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/PatchMixer"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a> -->
           <!-- <a class="badge text-bg-primary" href="https://drive.google.com/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;biblio</a> -->
         </li>
